fixed spacing issue on music and event section on landing page

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -98,6 +98,7 @@
   width: 358px;
   height: 408px;
   padding: 16px;
+  margin-left: 7px;
 }
 
 .button{
@@ -106,6 +107,7 @@
   border-radius: 0px 0px 8px 8px;
   width: 358px;
   margin-top: -50px;
+  margin-left: 7px;
 }
 
 .spotLink{
@@ -120,6 +122,7 @@
   width: 358px;
   height: 361px;
   margin-top: -35px;
+  margin-left: 7px;
 }
 
 .upcomingEvent{
@@ -177,11 +180,13 @@
   height: 50px;
   padding: 10px 10px;
   margin-top: 30px;
+  margin-left: 7px;
 }
 
 .eventName{
   text-align: left;
   font-size: 32px;
+  margin-left: 7px;
 }
 
 .eventTitleName{
